--- a/ajax/libs/two.js/package.json
+++ b/ajax/libs/two.js/package.json
@@ -1,9 +1,10 @@
 {
   "name": "two.js",
   "filename": "two.min.js",
-  "version": "0.6.0",
+  "version": "0.7.0-beta.1",
   "description": "A two-dimensional drawing api meant for modern browsers.",
-  "homepage": "http://jonobr1.github.com/two.js",
+  "homepage": "https://two.js.org/",
+  "module": "build/two.module.js",
   "keywords": [
     "dom",
     "w3c",
